--- a/src/components/Madals/needle.css
+++ b/src/components/Madals/needle.css
@@ -4,6 +4,12 @@
   width: 120px;
   height: 40px;
   margin-top: 20px;
+  color: #000;
+  border: 1px solid #000;
+}
+.needleCatheterBtn.selected {
+  border-color: green;
+  color: green;
 }
 
 .containerNeedle {
