--- a/src/components/Catheters/catheter.css
+++ b/src/components/Catheters/catheter.css
@@ -84,4 +84,39 @@ height: 40px;
   height: 40px;
   }
   
-  
+  .formShow {
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+.formShow h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.formShowTab {
+    display: flex;
+    flex-direction: column;
+}
+
+.listRow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.listRow p {
+    margin-top: 0; /* Сбрасываем стандартный отступ */
+}
+
+.listRow p:first-child {
+    margin-right: 10px; /* Задаем отступ только для первого элемента */
+}
+
+.endStartText {
+  display: flex;
+  justify-content: flex-end;
+}
