--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -2,7 +2,12 @@
     display: flex;
     margin-top: 5px;
   }
-  
+ .content_Text{
+  font-size: 15px;
+  margin-top: 20px;
+  font-style: normal;
+  margin-bottom: 15px;
+ }
   .contentItem {
     width: 120px;
     height: 40px;
