--- a/src/components/Filters/filter.css
+++ b/src/components/Filters/filter.css
@@ -22,7 +22,9 @@
     width: 250px;
     height: 40px;
 }
-
+.widthAdjusted {
+    width: 60px; 
+  }
 .btnImgMenu {
     height: 25px;
     width: 25px;
@@ -41,3 +43,7 @@
     margin-left: 210px;
 }
 
+.boxfilter{
+    display: flex;
+    align-items: center;
+}
