--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -1,26 +1,163 @@
 .buttonChose {
-    display: flex;
-    margin-top: 5px;
-  }
- .content_Text{
-  font-size: 15px;
-  margin-top: 20px;
+  display: flex;
+  margin-top: 5px;
+}
+
+.content_Text {}
+
+.contentItem {
+  width: 120px;
+  height: 40px;
+  flex-shrink: 0;
+  margin-right: 20px;
+  background: transparent;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.selected {
+  border-color: green;
+}
+
+.inputBtnBox {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.innerBlockBtns {
+  display: flex;
+  align-items: center;
+}
+
+.boxThreeBtnSmall {
+  margin-left: 260px;
+  align-items: center;
+}
+
+.textBtnBlock {
+  font-size: 18px;
   font-style: normal;
-  margin-bottom: 15px;
- }
-  .contentItem {
-    width: 120px;
-    height: 40px;
-    flex-shrink: 0;
-    margin-right: 20px;
-    background: transparent;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s ease;
-  }
-  
-  .selected {
-    border-color: green;
-  }
-  
+  font-weight: 400;
+  line-height: 160%;
+  margin-bottom: 10px;
+}
+
+.boxThreeBtn {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.mainBtnImg {
+  width: 40px;
+  height: 30px;
+}
+
+.inputBoxBox {
+  height: 40px;
+  width: 350px;
+}
+
+.inputBoxContainer {
+  display: flex;
+  align-items: center;
+}
+
+.btnThreeBlock {
+  margin-left: 20px;
+}
+
+.div {
+  border: 1px solid black;
+  height: 40px;
+  width: 50px;
+  padding: 8px;
+  background-color: white;
+}
+
+.injectionBtns {
+  margin-top: 30px;
+}
+
+.injectionBtn {
+  margin-right: 70px;
+  width: 160px;
+  height: 50px;
+  border: 1px solid black;
+  color: #000;
+}
+
+.injectionBtn.selected {
+  border: 1px solid green;
+  color: green;
+}
+
+.injectionContentBox {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+
+}
+
+.injectionContentInput {
+  width: 330px;
+  height: 40px;
+}
+
+.innerTodos {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.starchForm {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.innerBtn {
+  margin-left: 15px;
+}
+
+.rightArrow {
+  margin-left: 15px;
+}
+
+.deleteBtn {
+  background: transparent;
+  border: none;
+}
+
+.injectionContentBtn {
+  margin-left: 20px;
+}
+
+.innerTextAlem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 470px;
+  border: 1px solid black;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%
+}
+
+.textList {
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+}
+
+.inerField {
+  width: 480px;
+  height: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0.96px;
+}
