--- a/src/components/Banner/banner.css
+++ b/src/components/Banner/banner.css
@@ -122,3 +122,22 @@ tr:hover {
   color: green;
   /* Измените на нужный вам цвет */
 }
+.bannerTitle{
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 58px;
+}
+.coinText{
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 10px;
+}
+.inputCardText{
+  font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+}
