--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -1,9 +1,30 @@
+/* Typography */
+.coinTitle {
+  font-size: 65px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.subTitle {
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 44px;
+}
+
+.content_Text {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 34px;
+}
+
+/* Layout and Box Model */
 .buttonChose {
   display: flex;
   margin-top: 5px;
 }
-
-.content_Text {}
 
 .contentItem {
   width: 120px;
@@ -77,6 +98,7 @@
   background-color: white;
 }
 
+/* Injection Styles */
 .injectionBtns {
   margin-top: 30px;
 }
@@ -98,7 +120,6 @@
   margin-top: 20px;
   display: flex;
   align-items: center;
-
 }
 
 .injectionContentInput {
@@ -162,6 +183,7 @@
   letter-spacing: 0.96px;
 }
 
+/* Card Styles */
 .cardContainer {
   display: flex;
   gap: 20px;
@@ -179,7 +201,6 @@
 
 .cardContent {
   display: flex;
-
   gap: 5px;
 }
 
@@ -189,6 +210,7 @@
   cursor: pointer;
 }
 
+/* Carbon Container Styles */
 .cantainerCarbonen {
   display: flex;
   align-items: center;
@@ -234,6 +256,7 @@
   margin-left: 20px;
 }
 
+/* List Carbon Modal Styles */
 .listCarbonModal {
   margin-top: 10px;
 }
@@ -252,7 +275,6 @@
   color: white;
   height: 40px;
   text-align: left;
-
 }
 
 .listCarbonModalTitle {
@@ -262,6 +284,7 @@
   line-height: 150%;
 }
 
+/* Total Block Styles */
 .totalBlock {
   padding: 10px;
   border: 1px solid black;
@@ -271,7 +294,6 @@
 .listTotalBlock {
   display: flex;
   align-items: center;
-  padding: 10px;
 }
 
 .listSecondTotal,
@@ -285,6 +307,13 @@
   font-style: normal;
   font-weight: 400;
   line-height: 160%;
-  /* 25.6px */
   letter-spacing: 0.96px;
+}
+
+.totalBtn {
+  background: transparent;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  height: 40px;
+  width: 220px;
 }
